# waterbreaks

./: .gitignore  BACKEND_BRIEF.md  CONTRACT.md  FINAL_MERGE_AND_DESIGN.md  FRONTEND_BRIEF.md  FULL_SOURCE.md  MVP_SCOPE.md  PARTNER_BRIEF_OLD.md  README.md  demo-round.sh  merge.md  vercel.json
anchor/: .gitignore  Anchor.toml  package-lock.json  package.json
anchor/programs/water_break/: Cargo.toml
anchor/programs/water_break/src/: lib.rs
anchor/scripts/: deploy-devnet.sh  init-round.ts
anchor/tests/: water_break.ts
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: AchievementBadge.tsx  ActivityFeed.tsx  CommunityStats.tsx  Confetti.tsx  ExplorerLink.tsx  Leaderboard.tsx  MatchHeader.tsx  PredictionPanel.tsx  PrizePool.tsx  WaterBreakTimer.tsx
frontend/src/idl/: water_break.json  water_break.ts
frontend/src/lib/: mockData.ts  program.ts  wallet.tsx
frontend/src/styles/: theme.css
