[package]
name = "water_break"
version = "0.1.0"
description = "Water Break - World Cup water-break prediction market on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "water_break"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.2"
